--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,14 +1,12 @@
-<header class="bg-yellow-500 flex-col text-white px-6 py-4">
+<header class="flex-col text-white px-4 sm:px-6 md:px-6 py-3 sm:py-4 bg-transparent absolute top-0 w-full z-10">
   <div class="flex justify-between items-center w-full">
-    <img src="assets/logo.png" alt="Logo" class="h-10 -translate-x-3">
-
-    <div class="flex space-x-4">
-      <button class=" px-4 py-2 rounded">Saiba Mais</button>
-      <button class=" px-4 py-2 rounded">Missões</button>
-      <button class=" px-4 py-2 rounded">Cursos Online</button>
-      <button class=" px-4 py-2 rounded">Comunidade</button>
+    <img src="assets/logo.png" alt="Logo" class="h-8 sm:h-10 md:h-10 -translate-x-2">
+    <div class="flex gap-1 sm:gap-4">
+      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Saiba Mais</button>
+      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Missões</button>
+      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Cursos Online</button>
+      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Comunidade</button>
     </div>
   </div>
-
-  <div class="mt-4 w-full h-1 bg-white rounded"></div>
+  <div class="mt-3 sm:mt-4 w-full h-1 bg-white/50 rounded"></div>
 </header>
