homepage and footer almost finished

--- a/frontend/src/app/components/footer/footer.html
+++ b/frontend/src/app/components/footer/footer.html
@@ -1,16 +1,57 @@
 <footer class="bg-black text-white">
-  <div class="flex flex-col px-6 py-8">
-    <div>
-      <h3 class="text-lg font-semibold mb-2">Contactos</h3>
-      <p>Email: info@islagaia.pt</p>
-      <p>Telefone: 22 377 2980</p>
-      <p>Endereço: R. Diogo Macedo 192, 4400-107 Vila Nova de Gaia</p>
+  <div
+    class="flex flex-col md:flex-row justify-between items-center md:items-start px-6 py-0.5 sm:py-3 md:py-2 text-center md:text-left space-y-8 md:space-y-0">
+
+
+    <div class="text-center md:text-left pt-8">
+      <h3 class="text-lg font-poppins mb-2">Contactos</h3>
+      <p class="text-sm sm:text-base">Email: info@islagaia.pt</p>
+      <p class="text-sm sm:text-base">Telefone: 22 377 2980</p>
+      <p class="text-sm sm:text-base">Endereço: R. Diogo Macedo 192, 4400-107 Vila Nova de Gaia</p>
     </div>
+
+
+
+    <div class="flex flex-col items-center gap-1 pt-8">
+      <h3 class="text-lg font-poppins mb-2 mr-4">Siga-nos</h3>
+      <div class="flex flex-row md:flex-col gap-4 ml-2 md:ml-2">
+        <a href="https://www.facebook.com/GaiaISLA/?locale=pt_PT" target="_blank"
+          class="flex items-center gap-2 hover:opacity-75 transition justify-center md:justify-start">
+          <img src="assets/facebook.png" alt="facebook" class="w-4 h-4 sm:w-6 sm:h-6 filter invert">
+          <span class="text-sm sm:text-sm">ISLA Gaia</span>
+        </a>
+
+        <a href="https://www.instagram.com/islagaia_ipgt/" target="_blank"
+          class="flex items-center gap-2 hover:opacity-75 transition justify-center md:justify-start">
+          <img src="assets/instagram.png" alt="instagram" class="w-4 h-4 sm:w-6 sm:h-6 filter invert">
+          <span class="text-sm sm:text-sm">islagaia_ipgt</span>
+        </a>
+      </div>
+    </div>
+
+
+
+
+
+
+    <div class="flex justify-center md:justify-end">
+      <a href="https://www.islagaia.pt" target="_blank" class="hover:opacity-80 transition">
+        <img src="assets/islalogo.png" alt="Logo ISLA" class="w-48 sm:w-64 md:w-80 mt-0">
+      </a>
+    </div>
+
   </div>
 
+  <div
+    class="bg-white w-full px-4 sm:px-6 py-3 flex flex-col sm:flex-row items-center justify-between text-black text-sm sm:text-base gap-3 sm:gap-0">
+    <span>Política de tratamento de dados</span>
 
-  <div class="bg-white w-full px-6 py-4 flex justify-between items-center text-black">
-    <span>Politica de tratamento de dados</span>
-    <span>Produção Multimédia © 2025 COFAC</span>
+    <div class="flex items-center justify-center gap-4 sm:gap-6">
+      <img src="assets/prr.png" alt="Logo 1" class="w-12 sm:w-20">
+      <img src="assets/portugal.png" alt="Logo 2" class="w-12 sm:w-20">
+      <img src="assets/europa.png" alt="Logo 3" class="w-12 sm:w-20">
+    </div>
+
+    <span class="text-center sm:text-right">Produção Multimédia © 2025 COFAC</span>
   </div>
 </footer>
