--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,12 +1,42 @@
-<header class="flex-col text-white px-4 sm:px-6 md:px-6 py-3 sm:py-4 bg-transparent absolute top-0 w-full z-10">
+<header class="flex-col font-poppins text-white px-4 sm:px-6 md:px-6 py-3 sm:py-4 bg-transparent absolute top-0 w-full z-20">
   <div class="flex justify-between items-center w-full">
-    <img src="assets/logo.png" alt="Logo" class="h-8 sm:h-10 md:h-10 -translate-x-2">
+
+    <a routerLink="/" class="block">
+      <img src="assets/logo.png" alt="Logo" class="h-8 sm:h-10 md:h-10 -translate-x-2 hover:opacity-80 transition">
+    </a>
+
     <div class="flex gap-1 sm:gap-4">
-      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Saiba Mais</button>
-      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Missões</button>
-      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Cursos Online</button>
-      <button class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition">Comunidade</button>
+<a routerLink="/about"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Login
+      </a>
+
+      <a routerLink="/about"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Registar
+      </a>
+
+      <a routerLink="/about"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Saiba Mais
+      </a>
+
+      <a routerLink="/mission"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Missões
+      </a>
+
+      <a routerLink="/course"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Cursos Online
+      </a>
+
+      <a routerLink="/community"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Comunidade
+      </a>
     </div>
   </div>
-  <div class="mt-3 sm:mt-4 w-full h-1 bg-white/50 rounded"></div>
+
+  <div class="mt-3 sm:mt-4 w-full h-0.5 bg-white/50 "></div>
 </header>
