--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -11,5 +11,13 @@
         <span>Dashboard</span>
       </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link d-flex align-items-center"
+         routerLink="/backoffice/users"
+         routerLinkActive="active">
+        <i class="cil-user me-2"></i>
+        <span>Usuários</span>
+      </a>
+    </li>
   </ul>
 </div>
