--- a/frontend/src/app/components/frontoffice/header/header.html
+++ b/frontend/src/app/components/frontoffice/header/header.html
@@ -6,7 +6,7 @@
     </a>
 
     <div class="flex gap-1 sm:gap-4">
-<a routerLink="/about"
+<a routerLink="/"
         class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
         Login
       </a>
