--- a/frontend/src/app/layouts/back-shell/back-shell.css
+++ b/frontend/src/app/layouts/back-shell/back-shell.css
@@ -1,6 +1,16 @@
-:root { --admin-sidebar-width: 260px; }
-main { margin-left: 0; margin-top: -140px;} 
+:root {
+  --admin-header-height: 56px; 
+  --admin-sidebar-width: 260px;
+}
+
+main {
+  padding-top: var(--admin-header-height); 
+  margin-left: 0;
+  margin-top: -100px;
+}
 
 @media (min-width: 992px) {
-  main { margin-left: var(--admin-sidebar-width); }
+  main { margin-left: var(--admin-sidebar-width); } 
 }
+
+body { margin: 0; }
