--- a/frontend/src/app/components/frontoffice/header/header.html
+++ b/frontend/src/app/components/frontoffice/header/header.html
@@ -6,12 +6,12 @@
     </a>
 
     <div class="flex gap-1 sm:gap-4">
-<a routerLink="/"
+<a routerLink="/backoffice/dashboard"
         class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
         Login
       </a>
 
-      <a routerLink="/about"
+      <a routerLink="/backoffice/dashboard"
         class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
         Registar
       </a>
