--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar sidebar-fixed border-end" id="sidebar" style="width: var(--admin-sidebar-width)">
   <div class="sidebar-header border-bottom py-3 px-3 text-center">
     <a routerLink="/backoffice/dashboard" class="d-inline-flex align-items-center text-decoration-none">
-      <img src="assets/logo.png" alt="Logo" class="sidebar-logo me-2">
-      <span class="fw-bold text-dark">Backoffice</span>
+      <img src="assets/logo_colorida.png" alt="Logo" class="sidebar-logo me-2">
+      <span class="fw-bold text-isla-color">Backoffice</span>
     </a>
   </div>
 
