creating role crud pages on backoffice

--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -11,6 +11,10 @@
          routerLinkActive="active">Users</a>
 
       <a class="toplink"
+         routerLink="/backoffice/roles"
+         routerLinkActive="active">Funções</a>
+
+      <a class="toplink"
          routerLink="/backoffice/settings"
          routerLinkActive="active">Settings</a>
     </nav>
