--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -24,5 +24,15 @@
         <span>Usuários</span>
       </a>
     </li>
+
+     <li class="nav-item">
+      <a class="nav-link d-flex align-items-center"
+        routerLink="/backoffice/roles"
+        routerLinkActive="active">
+        <i class="cil-briefcase me-2"></i>
+        <span>Funções</span>
+      </a>
+    </li>
+
   </ul>
 </div>
