list, create, update and delete areas

--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -8,11 +8,15 @@
 
       <a class="toplink"
          routerLink="/backoffice/users"
-         routerLinkActive="active">Users</a>
+         routerLinkActive="active">Usuários</a>
 
       <a class="toplink"
          routerLink="/backoffice/roles"
          routerLinkActive="active">Funções</a>
+
+      <a class="toplink"
+         routerLink="/backoffice/areas"
+         routerLinkActive="active">Áreas</a>
 
       <a class="toplink"
          routerLink="/backoffice/settings"
@@ -25,7 +29,7 @@
         <i class="cil-bell fs-5"></i>
         <span class="badge rounded-pill bg-danger badge-count">5</span>
       </button>
-
+      
       <button class="icon-btn btn p-0 text-dark d-none d-sm-inline-flex">
         <i class="cil-list fs-5"></i>
         <span class="badge rounded-pill bg-warning text-dark badge-count">5</span>
