--- a/frontend/src/app/pages/backoffice/area/area-create/area-create.html
+++ b/frontend/src/app/pages/backoffice/area/area-create/area-create.html
@@ -1,5 +1,5 @@
 <section class="page-header sticky-top-under-app">
-  <h2>Editar função</h2>
+  <h2>Criar áreas</h2>
 </section>
 
 <form [formGroup]="form" class="card shadow-sm p-3">
