--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -34,5 +34,14 @@
       </a>
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link d-flex align-items-center"
+        routerLink="/backoffice/areas"
+        routerLinkActive="active">
+        <i class="cil-layers me-2"></i>
+        <span>Áreas</span>
+      </a>
+    </li>
+
   </ul>
 </div>
