new modality crud pages

--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -19,6 +19,10 @@
          routerLinkActive="active">Áreas</a>
 
       <a class="toplink"
+         routerLink="/backoffice/modalities"
+         routerLinkActive="active">Modalidades</a>
+
+      <a class="toplink"
          routerLink="/backoffice/settings"
          routerLinkActive="active">Settings</a>
     </nav>
