--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -43,5 +43,13 @@
       </a>
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link d-flex align-items-center"
+        routerLink="/backoffice/modalities"
+        routerLinkActive="active">
+        <i class="cil-applications me-2"></i>
+        <span>Modalidades</span>
+      </a>
+    </li>
   </ul>
 </div>
