changing button color

--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -2,7 +2,7 @@
   <div class="sidebar-header border-bottom py-3 px-3 text-center">
     <a routerLink="/backoffice/dashboard" class="d-inline-flex align-items-center text-decoration-none">
       <img src="assets/logo_colorida.png" alt="Logo" class="sidebar-logo me-2">
-      <span class="fw-bold text-isla-color">Backoffice</span>
+      <span class="fw-bold text isla-color-text">Backoffice</span>
     </a>
   </div>
 
