--- a/frontend/src/app/pages/backoffice/dashboard/dashboard.html
+++ b/frontend/src/app/pages/backoffice/dashboard/dashboard.html
@@ -2,7 +2,7 @@
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h2 class="mb-0">Dashboard</h2>
     <div class="btn-group">
-      <button class="btn btn-primary">Nova Ação</button>
+      <button class="btn btn-primary isla-color-bg">Nova Ação</button>
       <button class="btn btn-outline-secondary">Exportar</button>
     </div>
   </div>
