--- a/frontend/src/app/pages/backoffice/modality/modalities/modalities.html
+++ b/frontend/src/app/pages/backoffice/modality/modalities/modalities.html
@@ -1,7 +1,7 @@
 <section class="page-header sticky-top-under-app">
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h2>Modalidades</h2>
-    <button class="btn btn-primary" routerLink="/backoffice/modalities/create">
+    <button class="btn btn-primary isla-color-bg" routerLink="/backoffice/modalities/create">
       Nova modalidade
     </button>
   </div>
