--- a/frontend/src/app/pages/backoffice/area/areas/areas.html
+++ b/frontend/src/app/pages/backoffice/area/areas/areas.html
@@ -1,7 +1,7 @@
 <section class="page-header sticky-top-under-app">
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h2>Areas</h2>
-    <button class="btn btn-primary" routerLink="/backoffice/areas/create">
+    <button class="btn btn-primary isla-color-bg" routerLink="/backoffice/areas/create">
       Nova area
     </button>
   </div>
