--- a/frontend/src/app/pages/backoffice/user/users/users.html
+++ b/frontend/src/app/pages/backoffice/user/users/users.html
@@ -2,7 +2,7 @@
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h2 class="mb-0">Users</h2>
     <div class="btn-group">
-      <button class="btn btn-primary" routerLink="/backoffice/users/create">Novo usuário</button>
+      <button class="btn btn-primary isla-color-bg" routerLink="/backoffice/users/create">Novo usuário</button>
       <button class="btn btn-outline-secondary" (click)="exportCsv()">Exportar</button>
     </div>
   </div>
