--- a/frontend/src/app/components/frontoffice/header/header.html
+++ b/frontend/src/app/components/frontoffice/header/header.html
@@ -8,12 +8,17 @@
 
 
     <div class="flex gap-1 sm:gap-4">
-<a routerLink="/backoffice/dashboard"
+
+      <a routerLink="/backoffice/dashboard"
+        class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
+        Dashboard
+      </a>
+      <a routerLink="/login"
         class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
         Login
       </a>
 
-      <a routerLink="/backoffice/dashboard"
+      <a routerLink="/register"
         class="px-1 py-1 text-[10px] sm:px-4 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition inline-block text-center">
         Registar
       </a>
@@ -40,5 +45,5 @@
     </div>
   </div>
 
-  <div class="mt-3 sm:mt-4 w-full h-0.5 bg-black "></div>
+  <div class="mt-3 sm:mt-4 w-full h-0.5 bg-white "></div>
 </header>
