working on some details about login and register forms

--- a/frontend/src/app/pages/frontoffice/about/about.html
+++ b/frontend/src/app/pages/frontoffice/about/about.html
@@ -34,9 +34,9 @@
   </div>
 
   <div class="flex-1 relative w-full h-[200px] sm:h-[250px] md:h-[300px]">
-    <div class="hidden lg:block absolute top-0 left-[869px] h-80 w-52 bg-gray-300 z-0 rounded-lg"></div>
+    <div class="hidden lg:block absolute top-0 left-[869px] h-80 w-52 bg-gray-300 z-0 "></div>
     <img src="assets/Multimedia.png" alt="Horizontal"
-      class="mx-auto sm:mx-0 relative sm:absolute sm:top-12 sm:left-[650px] w-full sm:w-96 h-auto z-10 object-cover rounded-lg shadow-lg">
+      class="mx-auto sm:mx-0 relative sm:absolute sm:top-12 sm:left-[650px] w-full sm:w-96 h-auto z-10 object-cover  shadow-lg">
   </div>
 </div>
 
@@ -78,7 +78,7 @@
     </ul>
 
     <div
-      class="flex items-center gap-2 text-redIsla font-poppins font-semibold text-sm sm:text-base md:text-base sm:ml-10 md:ml-[42px] mt-6 mb-10">
+      class="flex items-center gap-2 text-redIsla font-poppins  text-sm sm:text-base md:text-base sm:ml-10 md:ml-[19px] mt-6 mb-10">
       <a routerLink="" class="text-2xl font-bold">+</a>
       <span>Mais perguntas</span>
     </div>
