--- a/frontend/src/app/pages/frontoffice/login/login.html
+++ b/frontend/src/app/pages/frontoffice/login/login.html
@@ -18,7 +18,7 @@
   <span class="absolute bottom-1 left-0 h-0.5 bg-redIsla" style="width: 120px;"></span>
 </div>
 
-      <form class="mt-6 flex flex-col gap-6 w-full max-w-[280px]">
+      <form class="mt-6 flex flex-col gap-2 w-full max-w-[280px]">
 
         <div class="flex flex-col">
           <label for="usuario" class="mb-2 text-sm sm:text-xs font-poppins text-black">
@@ -41,11 +41,11 @@
           Entrar
         </button>
 
-        <a href="" class="-mt-2 ml-[75px] text-xs text-black font-poppins hover:underline">
+        <a href="" class="mt-1 ml-[75px] text-xs text-black font-poppins hover:underline">
           Esqueceu a sua senha?
         </a>
 
-        <a href="" class="-mt-2 ml-[112px] text-xs text-black font-poppins hover:underline">
+        <a href="" class="mt-1 ml-[112px] text-xs text-redIsla font-poppins hover:underline">
           Registe-se
         </a>
       </form>
