--- a/frontend/src/app/pages/frontoffice/register/register.html
+++ b/frontend/src/app/pages/frontoffice/register/register.html
@@ -8,14 +8,14 @@
           class="h-8 sm:h-10 md:h-10 hover:opacity-80 transition cursor-pointer">
       </a>
 
-      <div class="relative inline-block mt-20">
+      <div class="relative inline-block mt-32">
         <p class="text-1xl sm:text-3xl md:text-4xl lg:text-xl font-poppins text-black drop-shadow-lg mb-2 inline-block">
           Crie a sua conta
         </p>
         <span class="absolute bottom-1 left-0 h-0.5 bg-redIsla" style="width: 120px;"></span>
       </div>
 
-      <form class="mt-4 flex flex-col gap-4 w-full max-w-[280px]">
+      <form class="mt-4 flex flex-col gap-2 w-full max-w-[280px]">
 
         <div class="flex flex-col">
           <label for="nome" class="mb-1 text-sm sm:text-xs font-poppins text-black">
@@ -58,10 +58,10 @@
         </div>
 
         <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-sm sm:text-xs text-white font-poppins">
-          Entrar
+          Registar
         </button>
 
-        <p class="-mt-1 ml-[55px] text-xs text-black font-poppins">
+        <p class="mt-1 ml-[55px] text-xs text-black font-poppins">
           Já tem uma conta?
           <a href="" class="text-redIsla relative inline-block hover:underline">Entre Aqui</a>
         </p>
