--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -25,6 +25,15 @@
       </a>
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link d-flex align-items-center"
+         routerLink="/backoffice/courses"
+         routerLinkActive="active">
+        <i class="cil-book me-2"></i>
+        <span>Cursos</span>
+      </a>
+    </li>
+
      <li class="nav-item">
       <a class="nav-link d-flex align-items-center"
         routerLink="/backoffice/roles"
