--- a/frontend/src/app/pages/backoffice/course/courses/courses.html
+++ b/frontend/src/app/pages/backoffice/course/courses/courses.html
@@ -93,7 +93,7 @@
           <td>{{ c.credits }}</td>
           <td>{{ c.price }}</td>
           <td class="text">
-            <time [attr.datetime]="c.created_at">{{ c.created_at | date:'dd/MM/yyyy HH:mm' }}</time>
+            <time [attr.datetime]="c.created_at">{{ c.created_at | date:'dd/MM/yyyy' }}</time>
           </td>
 
           <td class="text-end">
